[package]
name = "threadserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# Enable full optimization and link statically
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
